--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TwitterSample</string>
     <string name="login_twitter">Login Twitter</string>
+    <string name="following">following</string>
+    <string name="follower">follower</string>
 </resources>
